--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <a href="#"><img src="Imagens/Logo B7K.jpg" alt="Logo Bulacha7kpa" class="img-logo" style="width: 85px; height: 85px; border-radius: 50px; box-shadow: 0px -1px 15px 5px #217373;"></a>
+        <a href="#"><img src="Logo B7K.jpg" alt="Logo Bulacha7kpa" class="img-logo" style="width: 85px; height: 85px; border-radius: 50px; box-shadow: 0px -1px 15px 5px #217373;"></a>
     </header>
     <main class="conteudo">
         <section class="apresentacao">
