--- a/site.html
+++ b/site.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="Imagens/logo B7K.jpg" alt="Logo Bulacha7kpa" class="img-logo" style="width: 85px; height: 85px; border-radius: 50px; box-shadow: 0px -1px 15px 5px #217373;">
+        <img src="logo B7K.jpg" alt="Logo Bulacha7kpa" class="img-logo" style="width: 85px; height: 85px; border-radius: 50px; box-shadow: 0px -1px 15px 5px #217373;">
         <nav class="links">
             <a href="#" class="link-item">Comunidade B7K</a>
             <a href="#" class="link-item">Tutorial</a>
@@ -21,7 +21,7 @@
                 <h1 class="apresentacao-titulo">B7K - Games</h1>
                 <h2 class="apresentacao-subtitulo">Bem vindo à página de jogos feita pela comunidade!</h2>
             </div>
-            <img src="Imagens/john pok site.png" alt="John pork" style="border-radius: 50%; box-shadow: -1px 10px 10px #217373;">
+            <img src="john pok site.png" alt="John pork" style="border-radius: 50%; box-shadow: -1px 10px 10px #217373;">
         </section>
         <section class="area-jogos">
             <h3 style="color: darkred;">7kpa.Games</h3>
